--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- <link href="styles.css" rel="stylesheet" type="text/css" /> -->
     </head>
     <body>
-        <header></header>
+        <header id="topArea"></header>
         <main id="mainContainer">
         </main>
         <footer></footer>
