--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     </head>
     <body>
         <header id="topArea"></header>
-        <main id="mainContainer">
-        </main>
+        <main id="mainContainer"></main>
         <footer></footer>
         <script src="app.js"></script>
     </body>
