--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
         <!-- <link href="styles.css" rel="stylesheet" type="text/css" /> -->
     </head>
     <body>
-        <header id="topArea"></header>
+        <header id="topArea">
+            <div id="sizeControl">
+                <input type="range" id="sizeSlider" value="16" min="4" max="25" />
+            </div>
+        </header>
         <main id="mainContainer"></main>
         <footer></footer>
         <script src="app.js"></script>
